# change_detection

./: .gitignore  .gitmodules  README.md  dataloader.py  detection.py  environment.yml  geo_CRD.py  geo_tag_CRD.py  main.py  misc_build.sh  options.py  segmentation.py  tracking.py  utils.py  vpoint_tuner.py
arrows/: change_detector.py  detector.py  utils.py
cabinet_star/: .gitignore  Dockerfile  FLOP_Counter.py  LICENSE  README_optimization_paper.md  copy_script_optimization_paper.sh  environment.yml  infer.py  kubernetes.yaml  kubernetes_1branch.yaml  kubernetes_base.yaml  kubernetes_clr.yaml  kubernetes_coordconv.yaml  kubernetes_debug.yaml  kubernetes_dice.yaml  kubernetes_focal.yaml  kubernetes_ge.yaml  kubernetes_lookAhead.yaml  kubernetes_mixup.yaml  kubernetes_radam.yaml  kubernetes_randomgradients.yaml  kubernetes_spatialbottleneck.yaml
cabinet_star/cpp/src/: CMakeLists.txt  cabinet.cpp
cabinet_star/cpp/src/dataset/: mapillary.cpp  mapillary.h
cabinet_star/cpp/src/util/: json.cpp  json.h  nvtx.h  util.cpp  util.h
lanes/: change_detector.py  detector.py  test_lane_detector.py  test_vpoint.py  utils.py  vpoint.py  vpoint_debug.py
nie_tracking/: .gitmodules
nie_utilities/: data_processing_utils.py
object_detection_framework/: CMakeLists.txt  README.md  demo.py  dependencies.txt  infer.py  onnxsupport.py  requirements_virtualenv.txt  test.py  train.py
overhead_structure_face_and_traffic_barrier/: base_change_detector.py  base_detector.py  overhead_structure_face_change_detector.py  overhead_structure_face_detector.py  traffic_barrier_detector.py  (+1 more)
(+304 files in other folders)
